--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -11,11 +11,15 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
+target-path: "devdw"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+
+# models:
+#   biz:
+#     schema: devdw 
 # Configuring models
 models:
   biz:  # Make sure the project name matches here
